--- a/register.html
+++ b/register.html
@@ -63,7 +63,7 @@
                 </div>
                 <div class="mb-1">
                     <label for="" id="lb-color">Color:</label>
-                    <input type="text" name="color-input" id="color-input">
+                    <input type="color" name="color-input" id="color-input">
                 </div>
                 <button type="button" class="btn" id="btn-register" onclick="register()">Register</button>
             </form>
@@ -73,7 +73,8 @@
 
     </footer>
 
-    <script src="JS/js.js"></script>
+    <script src="JS/register.js"></script>
+    <script src="JS/storeManager.js"></script>
     <script src="JS/jquery-3.6.4.min.js"></script>
 </body>
 
